added favicon and icon for apple/android

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <meta name="description" content="Lumi enables real-time inspection of file changes made by all team members.">
     <meta name="keywords" content="Lumi,Software,Development,Real-time">
     <meta name="author" content="Lumi Team">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <title>Lumi</title>
     <link rel="stylesheet" type="text/css" href="style/reset.css">
     <link rel="stylesheet" type="text/css" href="graphics/material-design-icons/iconfont/material-icons.css">
@@ -228,8 +245,8 @@
                             <div class="profile-social">
                                 <a target="_blank" href="https://github.com/jessef99"><img src="graphics/github.png"
                                         alt="Github logo"></a>
-                                <a target="_blank" href="https://www.linkedin.com/in/jesse-feng-2895b013a/"><img src="graphics/linkedin.png"
-                                        alt="Github logo"></a>
+                                <a target="_blank" href="https://www.linkedin.com/in/jesse-feng-2895b013a/"><img
+                                        src="graphics/linkedin.png" alt="Github logo"></a>
                             </div>
                         </div>
                     </div>
@@ -242,10 +259,10 @@
                             <p class="name">Christopher Gauffin</p>
                             <p class="mail">cgau@kth.se</p>
                             <div class="profile-social">
-                                <a target="_blank" href="https://github.com/Christopher96"><img src="graphics/github.png"
-                                        alt="Github logo"></a>
-                                <a target="_blank" href="https://www.linkedin.com/in/christopher-gauffin-745731b6/"><img src="graphics/linkedin.png"
-                                        alt="Github logo"></a>
+                                <a target="_blank" href="https://github.com/Christopher96"><img
+                                        src="graphics/github.png" alt="Github logo"></a>
+                                <a target="_blank" href="https://www.linkedin.com/in/christopher-gauffin-745731b6/"><img
+                                        src="graphics/linkedin.png" alt="Github logo"></a>
                             </div>
                         </div>
                     </div>
@@ -296,8 +313,8 @@
                             <p class="name">Oscar Persson</p>
                             <p class="mail">opers@gmail.com</p>
                             <div class="profile-social">
-                                <a target="_blank" href="https://github.com/octosquidinteractive"><img src="graphics/github.png"
-                                        alt="Github logo"></a>
+                                <a target="_blank" href="https://github.com/octosquidinteractive"><img
+                                        src="graphics/github.png" alt="Github logo"></a>
                             </div>
                         </div>
                     </div>
@@ -311,8 +328,8 @@
                             <div class="profile-social">
                                 <a target="_blank" href="https://github.com/alevarn"><img src="graphics/github.png"
                                         alt="Github logo"></a>
-                                <a target="_blank" href="https://www.linkedin.com/in/marcus-a-230389136/"><img src="graphics/linkedin.png"
-                                        alt="Github logo"></a>
+                                <a target="_blank" href="https://www.linkedin.com/in/marcus-a-230389136/"><img
+                                        src="graphics/linkedin.png" alt="Github logo"></a>
                             </div>
                         </div>
                     </div>
