--- a/index.html
+++ b/index.html
@@ -215,6 +215,144 @@
                     </div>
                 </article>
             </section>
+            
+                    <div class="sprint">
+                        <h2 class="sprint-title">Sprint 2</h2>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Start date</p>
+                            <p class="sprint-value">2020-04-27</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">End date</p>
+                            <p class="sprint-value">2020-04-</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Sprint demo</p>
+                            <p class="sprint-value">In a <a target="_blank" href="https://zoom.us/">Zoom</a> meeting at
+                                08:30 AM</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Daily scrum</p>
+                            <p class="sprint-value">Everyday at 10:00 AM</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Sprint goal</p>
+                            <p class="sprint-value">Be able to send commands from the CLI, --join, --create, --health-check.</p>
+                            <p class="sprint-value">Be able to send patches between server and client.</p>
+                            <p class="sprint-value">Be able to use commands declared above on the server side.</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Sprint backlog</p>
+                            <table class="sprint-backlog">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Story</th>
+                                    <th>Story points</th>
+                                </tr>
+                                <tr>
+                                    <td>IP-100</td>
+                                    <td>Research how to get rid of relative paths.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-115</td>
+                                    <td>Create deploy script.</td>
+                                    <td class="story-point">2</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-117</td>
+                                    <td>Connect the local CLI with the Cloud API.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-71</td>
+                                    <td>Client A shall be able to receive a change and update its shadow folder.</td>
+                                    <td class="story-point">1</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-116</td>
+                                    <td>Connect the CLI with the client, hence being able to use Lumi commands.</td>
+                                    <td class="story-point">13</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-17</td>
+                                    <td>Client read and parse file difference to create diff.</td>
+                                    <td class="story-point">13</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-70</td>
+                                    <td>Server shall broadcast the file change.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-59</td>
+                                    <td>Implement Zip funtionality.</td>
+                                    <td class="story-point">20</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-82</td>
+                                    <td>Server cleanup when empty room.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-79</td>
+                                    <td>Client leaves the room.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-72</td>
+                                    <td>Client A shall be able to request to join a room.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-57</td>
+                                    <td>Server shall send back a shadow folder which has the same content and structure as source folder to Client A.</td>
+                                    <td class="story-point">3</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-60</td>
+                                    <td>Server and Client A shall be able to handle delete, move, and create files and folder.</td>
+                                    <td class="story-point">20</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-84</td>
+                                    <td>Server apply patch to the room folder.</td>
+                                    <td class="story-point">13</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-83</td>
+                                    <td>Create patch and send patch.</td>
+                                    <td class="story-point">8</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-78</td>
+                                    <td>Server handle user disconnect.</td>
+                                    <td class="story-point">8</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-81</td>
+                                    <td>Client disconnects from room.</td>
+                                    <td class="story-point">13</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-74</td>
+                                    <td>Server shall send out the shadow folder to client B.</td>
+                                    <td class="story-point">1</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-75</td>
+                                    <td>Client B shall store the shadow folder inside the source folder.</td>
+                                    <td class="story-point">1</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Story points sum</p>
+                            <p class="sprint-value story-points-sum"></p>
+                        </div>
+                    </div>
+            </section>
+            
             <section class="section">
                 <div class="section-title">
                     <h1 class="section-title-h1"><i class="material-icons">link</i><span>Team</span></h1>
