--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                 </article>
             </section>
             
+            <article class="section-article">
                     <div class="sprint">
                         <h2 class="sprint-title">Sprint 2</h2>
                         <div class="sprint-pair">
