--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
                             <p class="sprint-value story-points-sum"></p>
                         </div>
                     </div>
+                 </article>
             </section>
             
             <section class="section">
