--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         </div>
                         <div class="sprint-pair">
                             <p class="sprint-key">End date</p>
-                            <p class="sprint-value">2020-04-</p>
+                            <p class="sprint-value">2020-04-30</p>
                         </div>
                         <div class="sprint-pair">
                             <p class="sprint-key">Sprint demo</p>
