--- a/index.html
+++ b/index.html
@@ -213,10 +213,6 @@
                             <p class="sprint-value story-points-sum"></p>
                         </div>
                     </div>
-                </article>
-            </section>
-            
-            <article class="section-article">
                     <div class="sprint">
                         <h2 class="sprint-title">Sprint 2</h2>
                         <div class="sprint-pair">
@@ -238,7 +234,9 @@
                         </div>
                         <div class="sprint-pair">
                             <p class="sprint-key">Sprint goal</p>
-                            <p class="sprint-value">Be able to send commands from the CLI, --join, --create, --health-check.</p>
+                            <p class="sprint-value">Be able to send commands from the CLI, --join, --create,
+                                --health-check.
+                            </p>
                             <p class="sprint-value">Be able to send patches between server and client.</p>
                             <p class="sprint-value">Be able to use commands declared above on the server side.</p>
                         </div>
@@ -307,12 +305,15 @@
                                 </tr>
                                 <tr>
                                     <td>IP-57</td>
-                                    <td>Server shall send back a shadow folder which has the same content and structure as source folder to Client A.</td>
+                                    <td>Server shall send back a shadow folder which has the same content and structure
+                                        as
+                                        source folder to Client A.</td>
                                     <td class="story-point">3</td>
                                 </tr>
                                 <tr>
                                     <td>IP-60</td>
-                                    <td>Server and Client A shall be able to handle delete, move, and create files and folder.</td>
+                                    <td>Server and Client A shall be able to handle delete, move, and create files and
+                                        folder.</td>
                                     <td class="story-point">20</td>
                                 </tr>
                                 <tr>
@@ -352,9 +353,8 @@
                             <p class="sprint-value story-points-sum"></p>
                         </div>
                     </div>
-                 </article>
+                </article>
             </section>
-            
             <section class="section">
                 <div class="section-title">
                     <h1 class="section-title-h1"><i class="material-icons">link</i><span>Team</span></h1>
