--- a/index.html
+++ b/index.html
@@ -346,6 +346,11 @@
                                     <td>Client B shall store the shadow folder inside the source folder.</td>
                                     <td class="story-point">1</td>
                                 </tr>
+                                <tr>
+                                    <td>IP-86</td>
+                                    <td>Clients applies the patch to their shadow folder.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
                             </table>
                         </div>
                         <div class="sprint-pair">
