--- a/index.html
+++ b/index.html
@@ -351,6 +351,11 @@
                                     <td>Clients applies the patch to their shadow folder.</td>
                                     <td class="story-point">5</td>
                                 </tr>
+                                <tr>
+                                    <td>IP-119</td>
+                                    <td>Implement exclude RegEx for zip function.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
                             </table>
                         </div>
                         <div class="sprint-pair">
