--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </p>
                     <p>If we would like to join an already created room we can use the following command.</p>
                     <p class="shell-command">
-                        $ lumi --join [room id]
+                        $ lumi --join <room id>
                     </p>
                     <p>If we would like to leave a room that we previously joined we can use the following command.</p>
                     <p class="shell-command">
