changed NPM to lowercase

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         $ npm i -g lumi-cli
                     </p>
                     <p>
-                        Note that you need <a href="https://www.npmjs.com">NPM</a> installed before you can download and use Lumi.
+                        Note that you need <a href="https://www.npmjs.com">npm</a> installed before you can download and use Lumi.
                     </p>
                     <p>
                         After you have installed Lumi you should be able to ping the server using the following command.
