--- a/index.html
+++ b/index.html
@@ -381,6 +381,154 @@
                             <p class="sprint-value story-points-sum"></p>
                         </div>
                     </div>
+                    <div class="sprint">
+                        <h2 class="sprint-title">Sprint 3</h2>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Start date</p>
+                            <p class="sprint-value">2020-05-05</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">End date</p>
+                            <p class="sprint-value">2020-05-11</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Sprint demo</p>
+                            <p class="sprint-value">In a <a target="_blank" href="https://zoom.us/">Zoom</a> meeting at
+                                08:30 AM</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Daily scrum</p>
+                            <p class="sprint-value">Everyday at 10:00 AM</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Sprint goal</p>
+                            <p class="sprint-value">Implement basic functionality in React and Electron. The server should be able to handle all the basic commands such as join, create and leave without any bugs as well as authorization for the users.</p>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Sprint backlog</p>
+                            <table class="sprint-backlog">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Story</th>
+                                    <th>Story points</th>
+                                </tr>
+                                <tr>
+                                    <td>IP-40</td>
+                                    <td>List users in room.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                 <tr>
+                                    <td>IP-137</td>
+                                    <td>Backend shall be able to send the last change done by user.</td>
+                                    <td class="story-point">8</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-79</td>
+                                    <td>Client leaves from room.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-82</td>
+                                    <td>Server cleanup when empty room.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-135</td>
+                                    <td>Create invite component.</td>
+                                    <td class="story-point">8</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-77</td>
+                                    <td>Kick user from room.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-139</td>
+                                    <td>Front-end team creates a mock-up to present on tuesday morning.</td>
+                                    <td class="story-point">8</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-41</td>
+                                    <td>Create user config.</td>
+                                    <td class="story-point">8</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-128</td>
+                                    <td>Create "create room" component.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-127</td>
+                                    <td>Create loading screen.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-156</td>
+                                    <td>Design new logotype.</td>
+                                    <td class="story-point">3</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-158</td>
+                                    <td>Fix Typescript and Electron environment.</td>
+                                    <td class="story-point">8</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-134</td>
+                                    <td>Create settings component.</td>
+                                    <td class="story-point">13</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-143</td>
+                                    <td>Implement password for room.</td>
+                                    <td class="story-point">13</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-161</td>
+                                    <td>Join room with password.</td>
+                                    <td class="story-point">8</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-159</td>
+                                    <td>Create leave room component.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-131</td>
+                                    <td>Create Server log component.</td>
+                                    <td class="story-point">8</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-88</td>
+                                    <td>Server rejects the patch.</td>
+                                    <td class="story-point">8</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-125</td>
+                                    <td>Fix deletion-then-creation of folder with the same name bug.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-87</td>
+                                    <td>Handle merge conflicts.</td>
+                                    <td class="story-point">13</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-147</td>
+                                    <td>Modal pop-up electron.</td>
+                                    <td class="story-point">8</td>
+                                </tr>
+                                <tr>
+                                    <td>IP-140</td>
+                                    <td>Create loading GIF.</td>
+                                    <td class="story-point">5</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="sprint-pair">
+                            <p class="sprint-key">Story points sum</p>
+                            <p class="sprint-value story-points-sum"></p>
+                        </div>
+                    </div>
                 </article>
             </section>
             <section class="section">
