Added src to profile pictures

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                     </div>
                     <div class="profile">
                         <div class="profile-picture">
-                            <img src="graphics/placeholder.png" alt="Profile picture">
+                            <img src="graphics/tobias-johannesson" alt="Profile picture">
                         </div>
                         <div class="profile-info">
                             <p class="name">Tobias Johannesson </p>
@@ -623,7 +623,7 @@
                     </div>
                     <div class="profile">
                         <div class="profile-picture">
-                            <img src="graphics/placeholder.png" alt="Profile picture">
+                            <img src="graphics/oscar-persson.jpg" alt="Profile picture">
                         </div>
                         <div class="profile-info">
                             <p class="name">Oscar Persson</p>
