profile picture fix

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                     </div>
                     <div class="profile">
                         <div class="profile-picture">
-                            <img src="graphics/tobias-johannesson" alt="Profile picture">
+                            <img src="graphics/tobias-johannesson.jpg" alt="Profile picture">
                         </div>
                         <div class="profile-info">
                             <p class="name">Tobias Johannesson </p>
