--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
             </header>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-list-item"><a class="nav-link" href="#"><i class="material-icons">home</i>Home</a></li>
-                    <li class="nav-list-item"><a class="nav-link" href="#"><i class="material-icons">code</i>Product</a></li>
-                    <li class="nav-list-item"><a class="nav-link" href="#"><i class="material-icons">directions_run</i>Sprints</a></li>
-                    <li class="nav-list-item"><a class="nav-link" href="#"><i class="material-icons">group</i>Team</a></li>
+                    <li class="nav-list-item"><a class="nav-link" href="#"><i class="material-icons">home</i>Home</a>
+                    </li>
+                    <li class="nav-list-item"><a class="nav-link" href="#"><i class="material-icons">code</i>Product</a>
+                    </li>
+                    <li class="nav-list-item"><a class="nav-link" href="#"><i
+                                class="material-icons">directions_run</i>Sprints</a></li>
+                    <li class="nav-list-item"><a class="nav-link" href="#"><i class="material-icons">group</i>Team</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -124,7 +128,8 @@
                         $ npm i -g lumi-cli
                     </p>
                     <p>
-                        Note that you need <a href="https://www.npmjs.com">npm</a> installed before you can download and use Lumi.
+                        Note that you need <a href="https://www.npmjs.com">npm</a> installed before you can download and
+                        use Lumi.
                     </p>
                     <p>
                         After you have installed Lumi you should be able to ping the server using the following command.
@@ -132,7 +137,8 @@
                     <p class="shell-command">
                         $ lumi ping
                     </p>
-                    <p>Then we could ask the server to create a new room using the following command. The server should respond
+                    <p>Then we could ask the server to create a new room using the following command. The server should
+                        respond
                         with a unique room id.</p>
                     <p class="shell-command">
                         $ lumi create
@@ -145,7 +151,8 @@
                     <p class="shell-command">
                         $ lumi check &lt;room id&gt;
                     </p>
-                    <p>If we don't want to use two separate commands to create and join a room we can use the following command instead.</p>
+                    <p>If we don't want to use two separate commands to create and join a room we can use the following
+                        command instead.</p>
                     <p class="shell-command">
                         $ lumi start
                     </p>
@@ -402,7 +409,9 @@
                         </div>
                         <div class="sprint-pair">
                             <p class="sprint-key"><i class="material-icons">star</i>Sprint goal</p>
-                            <p class="sprint-value">Implement basic functionality in React and Electron. The server should be able to handle all the basic commands such as join, create and leave without any bugs as well as authorization for the users.</p>
+                            <p class="sprint-value">Implement basic functionality in React and Electron. The server
+                                should be able to handle all the basic commands such as join, create and leave without
+                                any bugs as well as authorization for the users.</p>
                         </div>
                         <div class="sprint-pair">
                             <p class="sprint-key"><i class="material-icons">format_list_bulleted</i>Sprint backlog</p>
@@ -417,7 +426,7 @@
                                     <td>List users in room.</td>
                                     <td class="story-point"><span>5</span></td>
                                 </tr>
-                                 <tr>
+                                <tr>
                                     <td class="story-id"><span>IP-137</span></td>
                                     <td>Backend shall be able to send the last change done by user.</td>
                                     <td class="story-point"><span>8</span></td>
