added template for expo page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <title>Lumi</title>
     <link rel="stylesheet" type="text/css" href="style/reset.css">
     <link rel="stylesheet" type="text/css" href="graphics/material-design-icons/iconfont/material-icons.css">
+    <link rel="stylesheet" type="text/css" href="style/fonts.css">
     <link rel="stylesheet" type="text/css" href="style/main.css">
 </head>
 
@@ -45,6 +46,8 @@
                     <li class="nav-list-item"><a class="nav-link" href="#"><i
                                 class="material-icons">directions_run</i>Sprints</a></li>
                     <li class="nav-list-item"><a class="nav-link" href="#"><i class="material-icons">group</i>Team</a>
+                    </li>
+                    <li class="nav-list-item"><a class="nav-link" href="expo.html"><i class="material-icons">explore</i>Expo</a>
                     </li>
                 </ul>
             </nav>
