added summary (need fix)

--- a/expo.html
+++ b/expo.html
@@ -95,6 +95,16 @@
           </div>
         </div>
       </div>
+      <div class="video-container">
+        <h2 class="video-title">What is Lumi?</h2>
+        <iframe width="100%" height="400px" src="https://www.youtube.com/embed/a8KKryZdheY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="executive-summary-container">
+        <h2 class="executive-summary-title">Summary</h2>
+        <p class="executive-summary-paragraph">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras et finibus lorem. Praesent volutpat, quam id tristique aliquet, lacus dui pellentesque justo, quis tristique est orci vel nunc. Fusce ac ornare leo, a efficitur velit. Duis consequat, eros nec consequat faucibus, sapien nisl pellentesque tellus, at tempus justo lorem eu urna. Quisque at sem vel ipsum elementum porttitor. Maecenas sit amet ornare quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc a enim tempus, pharetra sapien ac, vehicula purus. Duis ex nunc, fermentum at tincidunt at, suscipit mattis eros. Sed rhoncus, leo at euismod tristique, dolor velit pellentesque enim, eu sagittis eros sapien ut diam. Aenean blandit ipsum diam, eget dictum sapien lacinia quis. Fusce pellentesque pretium lorem, ac porta dui imperdiet in. Mauris tempus mauris consequat lacus porta, porttitor fringilla dolor semper.
+        </p>
+      </div>
       <div class="tutorial-container">
         <h2 class="tutorial-title">Follow this step-by-step tutorial to install Lumi and use it.</h2>
         <ul class="tutorial-list">
